Compilation with publishLocal.
Changed some javadoc comments to properly compile.